--- a/src/index.html
+++ b/src/index.html
@@ -3,65 +3,164 @@
 <!--[if IE 9]>         <html class="no-js gt-ie9 ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js gt-ie9"> <!--<![endif]-->
   <head>
-    <!--
-
-      Description:
-      Version:
-      Author:
-
-    //-->
-
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!-- #DNS prefetching -->
-    <!-- http://csswizardry.com/2013/01/front-end-performance-for-web-designers-and-front-end-developers -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <link rel="dns-prefetch" href="//use.typekit.net">
     <link rel="dns-prefetch" href="//google-analytics.com">
 
-    <!-- #Asset Prefetching -->
-    <!-- Fetch and Download Assets before requested by the user  -->
-    <!-- http://csswizardry.com/2013/01/front-end-performance-for-web-designers-and-front-end-developers/#section:resource-prefetching -->
     <link rel="prefetch" href="">
-
-    <!-- #Page Prefetching -->
-    <!-- http://calendar.perfplanet.com/2012/speed-up-your-site-using-prefetching -->
     <link rel="prefetch" href="index.html">
 
-    <!-- #Typekit -->
-
-    <title>Sassy Starter</title>
+    <title>Graphy</title>
     <meta name="description" content="">
     <meta name="robots" content="all">
 
-    <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-    <!-- http://mathiasbynens.be/notes/rel-shortcut-icon -->
-    <!-- http://mathiasbynens.be/notes/touch-icons -->
     <link rel="icon" type="image/ico" href="favicon.ico">
     <link rel="icon" type="image/png" href="favicon.png">
-
-    <!-- CSS, you gotta have style -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
 
-    <!-- Modernizer, cause some browsers suck -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
     </head>
   <body>
+    <div class="cover">
+      <h1 class="cover-title">Graphy</h1>
 
-    <!-- Add your site or application here -->
+      <div class="graph-card graphy graphy-colorful" data-bar-margin="16" data-max-amount="500000">
+        <div class="graph-card-front">
+          <a class="graph-card-open">View Code <i class="icon ion-code"></i></a>
 
-    <h1>Hello, Gorgeous!</h1>
+          <h3 class="graphy-title">Our Sales (2016)</h3>
+          <div class="graphy-division"></div>
 
-    <!-- SCRIPTS -->
+          <div class="graphy-inner">
+            <div class="graphy-inner-grid"></div>
+            <span class="graphy-elem--bar" data-bar-amount="60" data-title="Bar 1"></span>
+            <span class="graphy-elem--bar" data-bar-amount="20" data-title="bar2"></span>
+            <span class="graphy-elem--bar" data-bar-amount="40" data-title="bar3"></span>
+            <span class="graphy-elem--bar" data-bar-amount="30" data-title="bar4"></span>
+            <span class="graphy-elem--bar" data-bar-amount="50" data-title="bar5"></span>
+            <span class="graphy-elem--bar" data-bar-amount="10" data-title="bar6"></span>
+            <span class="graphy-elem--bar" data-bar-amount="60" data-title="bar7"></span>
+            <span class="graphy-elem--bar" data-bar-amount="75" data-title="bar8"></span>
+          </div>
+        </div>
+        <div class="graph-card-back">
+          <a class="graph-card-close"><i class="icon ion-close"></i></a>
+<textarea name="name" rows="8" cols="80">
+<div class="graphy" data-bar-margin="8">
+  <h3 class="graphy-title">Awesome Graph</h3>
+  <div class="graphy-division">
+  </div>
+
+  <div class="graphy-inner">
+    <div class="graphy-inner-grid"></div>
+    <span class="graphy-elem--bar" data-bar-amount="60"></span>
+    <span class="graphy-elem--bar" data-bar-amount="30"></span>
+    <span class="graphy-elem--bar" data-bar-amount="70"></span>
+    <span class="graphy-elem--bar" data-bar-amount="30"></span>
+    <span class="graphy-elem--bar" data-bar-amount="50"></span>
+  </div>
+</div>
+</textarea>
+        </div>
+      </div>
+      <div class="cdn-card">
+        <input type="text" name="" value="http://rawgit.com/hello">
+        <input type="text" name="" value="http://rawgit.com/hello">
+      </div>
+
+    </div>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript">
+      $(function(){
+        $('.graphy').each(function(i, elem){
+          var bars = $(this).find('.graphy-elem--bar');
+          var barLength = bars.length;
 
-    <!-- Google Analytics -->
+          var barWidth = $(this).width() / barLength * 0.85;
+          var barMargin = $(this).data('barMargin');
+          var maxAmount = $(this).data('maxAmount');
+          var animationSpeed = 0.8;
+          var innerHeight = 0;
 
+          bars.each(function(i, elem){
+            if (innerHeight < $(this).data('barAmount')) {
+              innerHeight = $(this).data('barAmount');
+            }
+          });
+
+          for (var i = 0; i < 10; i++) {
+            var unit = maxAmount - ((maxAmount / 10) * (i + 1));
+            $(this).find('.graphy-inner-grid').append('<div style="height:calc(10% - 1px);" data-unit="' + unit + '" class="graphy-inner-grid-vertical"></div>');
+            console.log();
+          }
+
+          var top = 0;
+          var left = 0;
+
+          bars.each(function(i, elem){
+            var barHeight = $(this).data('barAmount') / innerHeight * 100;
+            var barTitle = $(this).data('barTitle')
+
+            $(this).css('left', barWidth*i + barMargin);
+            $(this).css('width', barWidth - barMargin*2);
+            $(this).css('height', barHeight + '%');
+            $(this).css('transition', 'all ' + (animationSpeed) + 's ease-out');
+            $(this).css('-moz-transition', 'all ' + (animationSpeed) + 's ease-out');
+            $(this).css('-webkit-transition', 'all ' + (animationSpeed) + 's ease-out');
+            $(this).css('-o-transition', 'all ' + (animationSpeed) + 's ease-out');
+            $(this).css('transition-delay', animationSpeed * i * 0.1 + 's');
+            $(this).css('-moz-transition-delay', animationSpeed * i * 0.1 + 's');
+            $(this).css('-webkit-transition-delay', animationSpeed * i * 0.1 + 's');
+            $(this).css('-o-transition-delay', animationSpeed * i * 0.1 + 's');
+          });
+
+          $(this).addClass('loaded');
+        });
+        //custom code
+        var intvl = 0;
+        var graphyColors = ['#E91E63', '#2196F3', '#4CAF50', '#FF9800', '#795548'];
+
+        setInterval(function(){
+          $('.graphy-colorful').find('.graphy-elem--bar').css('background-color', graphyColors[intvl]);
+
+          if (intvl > 3) {
+            intvl = 0;
+          } else {
+            intvl++;
+          }
+        }, 1000);
+
+        $('.graph-card').on('click', function() {
+          if ($(this).hasClass('turned')) {
+            console.log('not turned');
+          } else {
+            $(this).addClass('turned');
+          }
+        });
+
+        $('.graph-card-close').on('click', function() {
+          setTimeout(function(){
+            $('.graph-card').removeClass('turned');
+          }, 10);
+        });
+
+        $('.cdn-card input').on('click', function (){
+          $(this).select();
+        });
+
+        $('.graph-card-back textarea').on('click', function (){
+          $(this).select();
+        });
+      });
+    </script>
   </body>
 </html>
